--- a/app/views/actors.html.erb
+++ b/app/views/actors.html.erb
@@ -1,3 +1,43 @@
+
+
+<!DOCTYPE html>
+<html>
+<head>
 <h1>List of all actors</h1>
+  <style>
+    table, th, td {
+      border: 3px double black;
+      border-collapse: collapse;
+    }
+  </style>
+</head>
+<body>
+
+  <table>
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Image</th>
+        <th>Name</th>
+        <th>Dob</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>     
+     
+     <% @actors.each do |actor| %>
+        <tr>
+          <td><%= actor.id %></td>
+          <td><img src=<%= actor.image %> style="width:250px;"></td>
+          <td><%= actor.name %></td>
+          <td><%= actor.dob %></td>
+          <td><a href="/actors/<%= actor.id %>">Show details</a></td>
+        </tr>
+      <% end %>
+
+    </tbody>
+  </table>
 
 
+</body>
+</html>
