--- a/app/views/directors_templates/directors.html.erb
+++ b/app/views/directors_templates/directors.html.erb
@@ -1,2 +1,41 @@
+<!DOCTYPE html>
+<html>
+<head>
 <h1>List of all directors</h1>
+  <style>
+    table, th, td {
+      border: 3px double black;
+      border-collapse: collapse;
+    }
+  </style>
+</head>
+<body>
 
+  <table>
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Image</th>
+        <th>Name</th>
+        <th>Dob</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>     
+     
+     <% @directors.each do |director| %>
+        <tr>
+          <td><%= director.id %></td>
+          <td><img src=<%= director.image %> style="width:250px;"></td>
+          <td><%= director.name %></td>
+          <td><%= director.dob %></td>
+          <td><a href="/directors/<%= director.id %>">Show details</a></td>
+        </tr>
+      <% end %>
+
+    </tbody>
+  </table>
+
+
+</body>
+</html>
