--- a/app/views/directors_templates/directors_detail.html.erb
+++ b/app/views/directors_templates/directors_detail.html.erb
@@ -1,3 +1,100 @@
 <h1>Director #<%= @director_id%> details</h1>
 
-<p> <%= @bio %></p>
+
+<a href = "/directors">Go back</a>
+
+
+<hr>
+   
+   <% 
+   directors = Director.all
+   director = directors.where({ :id => @director_id }).first 
+   %>
+
+<dl>
+  <dt>
+    Title
+  </dt>
+  <dd>
+    <%= director.name %>
+  </dd>
+
+  <dt>
+    Dob
+  </dt>
+  <dd>
+    <%= director.dob %>
+  </dd>
+
+  <dt>
+    Bio
+  </dt>
+  <dd>
+    <%= director.bio %>
+  </dd>
+
+  <dt>
+    Image
+  </dt>
+
+  <dd>
+      <img src=<%= director.image %> style="width:250px;">
+  </dd>
+
+  <dt>
+    Created at
+  </dt>
+  <dd>
+      <%= director.created_at %>
+  </dd>
+
+  <dt>
+    Updated at
+  </dt>
+  <dd>
+         <%= director.updated_at %>
+  </dd>
+</dl>
+
+<hr>
+<h2>Filmography</h2>
+
+ <style>
+    table, th, td {
+      border: 3px double black;
+      border-collapse: collapse;
+    }
+  </style>
+
+
+  <table>
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Title</th>
+        <th>Image</th>
+        <th>Year</th>
+        <th>Director</th>
+        <th></th>
+      </tr>
+    </thead>
+  
+
+<tbody>
+ <% 
+   movies = Movie.all
+   @movies_directed = movies.where({ :director_id => @director_id })
+   @movies_directed.each do |movie| %>
+        <tr>
+          <td><%= movie.id %></td>
+          <td><img src=<%= movie.image %> style="width:250px;"></td>
+          <td><%= movie.title %></td>
+          <td><%= movie.year %></td>
+          <td><%= Director.all.where({:id => movie.director_id}).first.name%></td>
+          <td><a href="/movies/<%= movie.id %>">Show details</a></td>
+        </tr>
+      <% end %>
+
+</tbody>
+  
+  </table> 
